Updates to content and experimenting integrating vinyl and breaches DB to new site

--- a/src/content/post/coding.mdx
+++ b/src/content/post/coding.mdx
@@ -1,5 +1,6 @@
 ---
 publishDate: 2024-01-25T00:00:00Z
+hidden: true
 title: Open-Source Wonders
 excerpt: Exploring programming languages and software development
 image: ~/assets/images/spaghetti-code.jpg
@@ -19,11 +20,11 @@ Created this because I wanted to keep track of my albums. When buying new record
 If I want to listen to a certain song I can just write it's name on the search and then easily find it from my by genre organized shelf of albums.
 
 You can explore my vinyl collection at
-[Karkkainen.net/records](/records).
+[Karkkainen.net/records](/records/index.html).
 Check out the source code at [GitHub.com/JAAKKQ/Vinyl-Manager](https://github.com/JAAKKQ/Vinyl-Manager).
 
 Other small projects:
-- [Karkkainen.net/breaches](/breaches)/
+- [Karkkainen.net/breaches](/breaches/index.html)/
   - Exploring breaches reported by haveibeenpwned.com
-- [Karkkainen.net/servers](/servers)
+- [Karkkainen.net/servers](/servers/index.html)
   - Old tool I used to access my servers quickly
