--- a/src/content/post/videogame.mdx
+++ b/src/content/post/videogame.mdx
@@ -1,7 +1,8 @@
 ---
 publishDate: 2024-01-26T00:00:00Z
+hidden: true
 title: FPS Multiplayer game in Unreal Engine 4
-excerpt: FPS multiplayer game with Unreal Engine 4 that aims to emulate the experience of the renowned CS:GO. 
+excerpt: FPS multiplayer game with Unreal Engine 4 that aims to emulate the experience of Counter-Strike. 
 image: ~/assets/images/videogame.jpg
 category: What I Do
 tags:
@@ -10,6 +11,6 @@ metadata:
   canonical: https://karkkainen.net/videogames
 ---
 
-In 2021 I made a FPS multiplayer game with Unreal Engine 4 that aimed to emulate the experience of the renowned CS:GO. This endeavor provided invaluable insights into the complexities of networking in multiplayer games, unraveling the challenges that developers encounter.
+In 2021 I made a FPS multiplayer game with Unreal Engine 4 that aimed to emulate the experience of Counter-Strike. This experiment provided invaluable insights into the complexities of networking in multiplayer games, unraveling the challenges that developers encounter.
 
 This was my first big coding project and one profound takeaway from this experience is the realization that substantial code changes may manifest as seemingly minor adjustments for end-users.
