Package and content updates
Updated all packages to the latest versions.

Added more details to main page content.
- Details to work experience, technical skills and experimenting with technology sections.

Added blur overlay to the contact page PGP key element.

--- a/src/content/post/home-lab.mdx
+++ b/src/content/post/home-lab.mdx
@@ -1,6 +1,6 @@
 ---
 publishDate: 2024-02-29T00:00:00Z
-hidden: false
+hidden: true
 title: Welcome to my home lab!
 excerpt: Here, servers do their thing, code gets a bit wild, and it's a mix of organized chaos.
 image: ~/assets/images/servers.jpg
