--- a/src/content/post/coding.mdx
+++ b/src/content/post/coding.mdx
@@ -8,7 +8,7 @@ category: What I Do
 tags:
   - Coding
 metadata:
-  canonical: https://karkkainen.net/videogames
+  canonical: https://karkkainen.net/coding
 ---
 ### Digital Banking System Concept with NodeJS
 A peer-to-peer digital banking system designed for secure and efficient management of transactions and accounts. This system leverages cryptographic signatures and a distributed chain of data blocks interconnected to handle secure user authentication, account creation, fund transfers, and balances. It ensures data integrity and confidentiality through advanced cryptographic techniques, offering users a reliable and transparent banking experience.
