--- a/src/content/post/home-lab.mdx
+++ b/src/content/post/home-lab.mdx
@@ -1,6 +1,6 @@
 ---
 publishDate: 2024-02-29T00:00:00Z
-hidden: true
+draft: true
 title: Welcome to my home lab!
 excerpt: Here, servers do their thing, code gets a bit wild, and it's a mix of organized chaos.
 image: ~/assets/images/servers.jpg
@@ -10,26 +10,38 @@ tags:
 metadata:
   canonical: https://karkkainen.net/home-lab
 ---
+
 ## Services
+
 - VPN Servers
   - Access Servers
-  - Site-to-Site Tunnel 
+  - Site-to-Site Tunnel
   - Device Protection Tunnel
 - Suricata for Network Monitoring
 - Web Servers
 - Internal Mail Server
-- Jenkins 
+- Jenkins
+
 ---
+
 ## Hardware
+
 #### Helsinki Firewall
+
 - Ryzen 5 2600x 6 Core
 - 8 GB DDR4 RAM
+
 #### Helsinki Main Processing Server
+
 - Ryzen 9 7950x 16 Core
 - 32 GB DDR5 RAM
 - RTX 4070 SUPER
+
 #### Helsinki Backup Server
+
 - 2 x Xeon X5680
 - 96 GB DDR3
+
 #### Singapore
+
 - AWS EC2
