--- a/src/content/post/videogame.mdx
+++ b/src/content/post/videogame.mdx
@@ -1,8 +1,8 @@
 ---
 publishDate: 2024-01-26T00:00:00Z
-hidden: true
+draft: true
 title: FPS Multiplayer game in Unreal Engine 4
-excerpt: FPS multiplayer game with Unreal Engine 4 that aims to emulate the experience of Counter-Strike. 
+excerpt: FPS multiplayer game with Unreal Engine 4 that aims to emulate the experience of Counter-Strike.
 image: ~/assets/images/videogame.jpg
 category: What I Do
 tags:
