--- a/src/content/post/hidden.mdx
+++ b/src/content/post/hidden.mdx
@@ -1,10 +1,11 @@
 ---
 publishDate: 2024-02-29T00:00:00Z
-hidden: true
+draft: true
 title: Hidden page
 excerpt: Hidden page desc
 image: ~/assets/images/videogame.jpg
 metadata:
   canonical: https://karkkainen.net/hidden
 ---
+
 Hello World!
