--- a/src/content/post/exploring-hong-kong.mdx
+++ b/src/content/post/exploring-hong-kong.mdx
@@ -21,4 +21,4 @@ The knowledge and skills I gained during this time extended well beyond IT. The 
 
 If you are considering doing your internship abroad, do it, you won’t regret it. It will open countless doors and provide immense personal and professional growth. For example, I would never have had the chance to meet the brilliant minds from Google, Binance and students from top universities like Peking and Cambridge otherwise. Embrace the opportunity to work abroad and you will experience a world of new possibilities and valuable connections that will shape your future in ways you never imagined.
 
-Lastly, I would like to thank from the bottom of my heart [Business College Helsinki](https://en.bc.fi/) for giving me this amazing opportunity. Their support made this incredible journey possible and I am deeply grateful for the chance to grow both personally and professionally during my time in Hong Kong.
+Lastly, I would like to thank from the bottom of my heart <a href="https://en.bc.fi/" target="_blank">Business College Helsinki</a> for giving me this amazing opportunity. Their support made this incredible journey possible and I am deeply grateful for the chance to grow both personally and professionally during my time in Hong Kong.
