--- a/src/content/post/coding.mdx
+++ b/src/content/post/coding.mdx
@@ -17,9 +17,7 @@ A peer-to-peer digital banking system designed for secure and efficient manageme
 
 ### NodeJS Vinyl Manager
 
-Created this because I wanted to keep track of my albums. When buying new records I had to make sure I did not have that album or song already. With this I could solve my problem easily.
-
-If I want to listen to a certain song I can just write it's name on the search and then easily find it from my by genre organized shelf of albums.
+Tool for me to keep track of my vinyl record collection.
 
 You can explore my vinyl collection at
 [Karkkainen.net/records](/records/index.html).
