Updates to content and grammar fixes

--- a/src/content/post/exploring-hong-kong.mdx
+++ b/src/content/post/exploring-hong-kong.mdx
@@ -8,7 +8,7 @@ tags:
 metadata:
   canonical: https://karkkainen.net/exploring-hong-kong
 ---
-During my summer in Hong Kong, I had the opportunity to work at a food trading company called Nordiska Partners. I got to meet with amazing people from Google, Binance and University students from Peking and Cambridge Universities. Together with those students we even travelled to Shenzhen Mainland China to explore the largest electronic market on earth.
+During my summer in Hong Kong, I had the opportunity to work at a food trading company called Nordiska Partners. I got to meet with amazing people from Google, Binance and university students from Peking and Cambridge Universities. Together with those students we even travelled to Shenzhen Mainland China to explore the largest electronic market on earth.
 
 <figure>![Electronic shop in Shenzhen](~/assets/images/Shop-in-Shenzhen.jpg)<figcaption>Electronic repair shop in Shenzhen</figcaption></figure>
 
