--- a/src/content/post/home-lab.mdx
+++ b/src/content/post/home-lab.mdx
@@ -1,7 +1,7 @@
 ---
 publishDate: 2025-01-06T00:00:00Z
-title: Welcome to my home lab!
-excerpt: Here, servers do their thing, code gets a bit wild, and it's a mix of organized chaos.
+title: Hardware Wonders
+excerpt: Expoloring hardware, servers, networking and data centers.
 image: ~/assets/images/servers.jpg
 category: What I Do
 tags:
@@ -9,8 +9,32 @@ tags:
 metadata:
   canonical: https://karkkainen.net/home-lab
 ---
-Updated page on January 6, 2025
+Last updated: Jul 6, 2025
 
+I have increasingly started to focus more on cyber security, servers, and networking instead of software development. It all started with building the infrastructure to run the game servers for the Beryllium multiplayer game I developed. Over time, I started running other services on the same servers, and it quickly transformed into a home lab.
+
+Especially after starting my studies at Business College Helsinki, I have become more fascinated by data centers and the infrastructure around them. My home lab has helped me a lot in my IT studies, and I would say it has been a key factor in my high grades and early graduation from Business College Helsinki.
+
+Here you can get a little peek into the contents of my home lab.
+
+### Software and Tools I Have Used
+**Virtualization:** VMware ESXi, Hyper-V, Proxmox, XCP-ng  
+**Operating Systems:** Windows, Linux, OpenBSD  
+**Containerization:** Docker  
+**Networking & Security:** pfSense, Suricata, HAProxy, OpenVPN, Unbound, BIND9, step-ca, Let's Encrypt  
+**Storage & NAS:** TrueNAS  
+**Web & Application Servers:** Apache2, NGINX, TOR  
+**DevOps, Automation & CI/CD:** Jenkins, Puppet  
+**Collaboration & Self-Hosting:** Nextcloud  
+
+In networking IPv6 is something that I really don't know much about but I am increasingly trying to learn about it.
+
+I don't know much about macOS since I have never owned a MacBook, but I find them interesting and I hope I will get to own one someday. I really like Windows since I have always used it. I have tried to switch my personal computer to Linux multiple times, but I have always returned to Windows. Especially, I like that I can log in to my Windows laptop just by using the fingerprint reader. On Linux, I could not get my fingerprint reader to work.
+
+Don't get me wrong, I love Linux, but only on servers, not on personal computers. In fact, my first computer, which I got from my brother when I was nine, ran Ubuntu. I used it for a year until switching to Windows. Ubuntu was fine since I only used the computer to play Counter-Strike at the time.
+
+
+---
 ## Services
 
 - VPN Servers
@@ -19,7 +43,6 @@ Updated page on January 6, 2025
 - Web Servers
 - Jenkins
 - Remote Windows Workstations
----
 
 ## Hardware
 
