--- a/src/content/post/home-lab.mdx
+++ b/src/content/post/home-lab.mdx
@@ -11,7 +11,7 @@ metadata:
 ---
 Last updated: Jul 6, 2025
 
-I have increasingly started to focus more on cyber security, servers, and networking instead of software development. It all started with building the infrastructure to run the game servers for the Beryllium multiplayer game I developed. Over time, I started running other services on the same servers, and it quickly transformed into a home lab.
+My home lab started with building the infrastructure to run the game servers for the Beryllium multiplayer game I developed. Over time, I started running other services on the same servers, and it quickly transformed into a home lab.
 
 Especially after starting my studies at Business College Helsinki, I have become more fascinated by data centers and the infrastructure around them. My home lab has helped me a lot in my IT studies, and I would say it has been a key factor in my high grades and early graduation from Business College Helsinki.
 
